2003-12-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in shared/Makefile.am, shmdr/Makefile.am.
	* shared/Makefile.am: Remove.
	* shmdir/Makefile.am: Remove.
	* bsp.am: Add preinstallation dirstamp support.

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* shmdr/Makefile.am: Remove all-local: $(ARCH).

2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bsp.am: Reworked.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* shmdr/Makefile.am: Reflect having moved automake/.

2003-08-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* shmdr/Makefile.am: Reflect having merged configure.ac into
	../../configure.ac.

2003-08-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove (Merged into ../../configure.ac).
	* Makefile.am: Reflect having merged configure.ac into
	../../configure.ac.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-14	Joel Sherrill <joel@OARcorp.com>

	AMD a29k port declared obsolete.
	* a29k/.cvsignore, a29k/ChangeLog, a29k/Makefile.am, a29k/acinclude.m4,
	a29k/configure.ac, a29k/portsw/.cvsignore, a29k/portsw/ChangeLog,
	a29k/portsw/Makefile.am, a29k/portsw/README, a29k/portsw/bsp_specs,
	a29k/portsw/configure.ac, a29k/portsw/times,
	a29k/portsw/console/.cvsignore, a29k/portsw/console/Makefile.am,
	a29k/portsw/console/concntl.h, a29k/portsw/console/console.c,
	a29k/portsw/console/serial.c, a29k/portsw/console/serial.h,
	a29k/portsw/include/.cvsignore, a29k/portsw/include/Makefile.am,
	a29k/portsw/include/bsp.h, a29k/portsw/start/.cvsignore,
	a29k/portsw/start/Makefile.am, a29k/portsw/start/amd.ah,
	a29k/portsw/start/pswmacro.ah, a29k/portsw/start/register.S,
	a29k/portsw/start/register.ah, a29k/portsw/start/start.S,
	a29k/portsw/startup/.cvsignore, a29k/portsw/startup/Makefile.am,
	a29k/portsw/startup/bspclean.c, a29k/portsw/startup/bspstart.c,